# TavernHelper

./: .gitignore  README.md  Run.cmd
readme/: MANUAL.md  README_DE.md  README_EN.md  README_TC.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  logger.rs  main.rs
src-tauri/src/commands/: auth.rs  config.rs  conversation.rs  creation.rs  crypto.rs  drafts.rs  gallery.rs  local_data.rs  mod.rs  node.rs  project.rs  system.rs  temp_manager.rs  worldtree.rs
src-tauri/src/database/: mod.rs  schema.rs
src-tauri/src/services/: clipboard.rs  crypto.rs  dirty_manager.rs  llm_api.rs  mod.rs  temp_manager.rs
src-tauri/src/types/: mod.rs
src-vue/: App.vue  index.html  main.ts  package-lock.json  package.json  package.json.md5  tsconfig.json  vite.config.ts
src-vue/api/: index.ts
src-vue/components/: index.ts
src-vue/composables/: index.ts
src-vue/constants/: defaults.ts
src-vue/i18n/: index.ts  messages.ts
src-vue/stores/: index.ts
src-vue/styles/: base.css  global.css  variables.css
src-vue/types/: api.d.ts  env.d.ts
src-vue/utils/: clipboard.ts  codeFormatter.ts  format.ts  index.ts  logger.ts  storage.ts  validate.ts
src-wails/: api.go  app.go  auth.go  clipboard.go  config.go  crypto.go  database.go  dirty_manager.go  drafts.go  gallery.go  go.mod  llm_api.go  main.go  node.go  project.go  safemode.go  schema.go  temp_manager.go  types.go  wails.json  worldtree.go  worldtree_delta.go  worldtree_markers.go
src-wails/prompts/: system.txt  t2i.txt  worldtree.txt
(+74 files in other folders)
